# Open-Dart-Plugin

./: .gitignore  LICENSE  README.md  pyproject.toml  smithery.yaml
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
.github/workflows/: publish.yml
plugins/claude/opendart/: .mcp.json
plugins/claude/opendart-excel/.claude-plugin/: plugin.json
plugins/claude/opendart-excel/skills/opendart-excel/scripts/: create_workbook_from_mcp.py
plugins/claude/opendart/.claude-plugin/: plugin.json
plugins/claude/opendart/skills/opendart-excel/: SKILL.md
plugins/claude/opendart/skills/opendart-excel/scripts/: build_financial_excel.py  create_workbook_from_mcp.py  dartdoc.py  prepare_notes_json.py
plugins/codex/opendart/: .mcp.json
plugins/codex/opendart-excel/.codex-plugin/: plugin.json
plugins/codex/opendart-excel/skills/opendart-excel/scripts/: _ensure_deps.py  verify_workbook.py
plugins/codex/opendart/.codex-plugin/: plugin.json
plugins/codex/opendart/skills/opendart-excel/: SKILL.md  requirements.txt
plugins/codex/opendart/skills/opendart-excel/scripts/: dartdoc.py
src/opendartmcp/: client.py  config.py  errors.py  server.py
src/opendartmcp/tools/: business_report.py  disclosure.py  financial.py  major_report.py  securities.py  stock_holdings.py
tests/: test_client_document.py  test_config_cli.py  test_tool_registry.py
