[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opendartmcp"
version = "0.1.0"
description = "Open DART API MCP server"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "xmltodict>=0.13.0",
]

[project.scripts]
opendartmcp = "opendartmcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/opendartmcp"]
